Add inline-flex data to table

--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -1646,6 +1646,24 @@ div {
 </xmp>
                     </td>
                 </tr>
+                <tr>
+                    <td>inline-flex</td>
+                    <td>inline-flex property</td>
+                    <td>The CSS <em>display: inline-flex</em> property sets an HTML element as an inline flex container which takes only the required space for the content. Any child elements that reside within the flex container are called flex items. Flex items change their size and location in response to the size and position of their parent container.</td>
+                    <td class="example">
+<xmp>
+.container {
+    width: 200px;
+}
+    
+.child {
+    display: inline-flex;
+    width: 150px;
+    height: auto;
+}
+</xmp>
+                    </td>
+                </tr>
             </tbody>
     </div>
 </body>
