--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -1663,7 +1663,7 @@ div {
                     </td>
                 </tr>
                 <tr>
-                    <td>align-items</td>
+                    <td>align-items: ____</td>
                     <td colspan="2">Makes it possible to space flex items vertically. There are five commonly used values for the align-items property:
                         <ul>
                             <li><em>flex-start</em></li>
