Add example code

--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -1680,7 +1680,9 @@ div {
                     </td>
                     <td class="example">
 <xmp>
-example
+.container {
+    align-items: baseline;
+}
 </xmp>
                     </td>
                 </tr>
