Add emphasis to divs

--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -1749,7 +1749,7 @@ div {
                     <td>flex-basis</td>
                     <td colspan="2">Allows specification of the width of an item before it stretches or shrinks.
                     <br>
-                    In the example, the .side divs will be 100 pixels wide and the .center div will be 150 pixels wide if the .container div has just the right amount of space (350 pixels, plus a little extra for margins and borders). If the .container div is larger, the .center div will absorb twice as much space as the .side divs.
+                    In the example, the <em>.side</em> divs will be 100 pixels wide and the <em>.center</em> div will be 150 pixels wide if the <em>.container </em>div has just the right amount of space (350 pixels, plus a little extra for margins and borders). If the <em>.container</em> div is larger, the <em>.center</em> div will absorb twice as much space as the .side divs.
                     </td>
                     <td class="example">
 <span class="code1">.container</span> {
