--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -1616,7 +1616,7 @@ div {
                     </td>
                 </tr>
                 <tr>
-                    <td>justify-content:____</td>
+                    <td>justify-content:____;</td>
                     <td colspan="2">The CSS justify-content flexbox property defines how the browser distributes space between and around content items along the main-axis of their container. This is when the content items do not use all available space on the major-axis (horizontally).
                     <br>
                     justify-content can have the values of:
@@ -1663,7 +1663,7 @@ div {
                     </td>
                 </tr>
                 <tr>
-                    <td>align-items: ____</td>
+                    <td>align-items: ____;</td>
                     <td colspan="2">Makes it possible to space flex items vertically. There are five commonly used values for the align-items property:
                         <ul>
                             <li><em>flex-start</em></li>
@@ -1687,7 +1687,7 @@ div {
                     </td>
                 </tr>
                 <tr>
-                    <td>flex-grow: (number, e.g. 1, 2, etc.);</td>
+                    <td>flex-grow: _;</td>
                     <td colspan="2">Allows for specific items to <b>grow</b> to fill a container and also which items should grow proportionally more or less than others. 
                     <br>
                     In the example, the .container div has a display value of flex, so its three child divs will be positioned next to each other. If there is additional space in the .container div (in this case, if it is wider than 300 pixels), the flex items will grow to fill it. The .center div will stretch twice as much as the .side divs. For example, if there were 60 additional pixels of space, the center div would absorb 30 pixels and the side divs would absorb 15 pixels each.</td>
@@ -1710,7 +1710,7 @@ div {
                     </td>
                 </tr>
                 <tr>
-                    <td>flex-shrink</td>
+                    <td>flex-shrink: _;</td>
                     <td colspan="2">Allows for specific items to <b>shrink</b> to fill a container and also which items should <b>shrink</b> proportionally more or less than others.
                     <br>
                     In the example, the .center div will shrink twice as much as the .side divs if the .container div is too small to fit the elements within it. If the content is 60 pixels too large for the flex container that surrounds it, the .center div will shrink by 30 pixels and the outer divs will shrink by 15 pixels each. Margins are unaffected by flex-grow and flex-shrink.
@@ -1746,7 +1746,7 @@ div {
                     </td>
                 </tr>
                 <tr>
-                    <td>flex-basis</td>
+                    <td>flex-basis: ___px;</td>
                     <td colspan="2">Allows specification of the width of an item before it stretches or shrinks.
                     <br>
                     In the example, the <em>.side</em> divs will be 100 pixels wide and the <em>.center</em> div will be 150 pixels wide if the <em>.container </em>div has just the right amount of space (350 pixels, plus a little extra for margins and borders). If the <em>.container</em> div is larger, the <em>.center</em> div will absorb twice as much space as the .side divs.
