Add emphasis to examples

--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -1803,11 +1803,11 @@ div {
                     <td>flex-wrap: ____</td>
                     <td colspan="2">Allows for flex items to move to the next line when necessary. It allows for three values to be declared:
                     <ul>
-                        <li>wrap</li>
+                        <li><em>wrap</em></li>
                         child elements of a flex container that don’t fit into a row will move down to the next line
-                        <li>wrap-reverse</li>
+                        <li><em>wrap-reverse</em></li>
                         the same functionality as wrap, but the order of rows within a flex container is reversed (for example, in a 2-row flexbox, the first row from a wrap container will become the second in wrap-reverse and the second row from the wrap container will become the first in wrap-reverse)
-                        <li>nowrap</li>
+                        <li><em>nowrap</em></li>
                         prevents items from wrapping; this is the default value and is only necessary to override a wrap value set by a different CSS rule.
                     </ul>
                     In the example, three flex items are contained by a parent flex container. The flex container is only 250 pixels wide so the three 100 pixel wide flex items cannot fit inline. The flex-wrap: wrap; setting causes the third, overflowing item to appear on a new line, below the other two items.
