--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -1857,6 +1857,27 @@ div {
 }
                     </td>
                 </tr>
+                <tr>
+                    <td>flex-flow: _____</td>
+                    <td colspan="2">Allows for the declaration of flex-wrap and flex-direction in one line.</td>
+                    <td class="example">
+<span class="code1">container</span> {
+<br>
+&emsp;<span class="code2">display</span>: <span class="code3">flex</span>;
+<br>&emsp;<span class="code2">flex-wrap</span>: <span class="code3">wrap</span>;
+<br>
+&emsp;<span class="code2">flex-direction</span>: <span class="code3">column</span>;
+<br>
+into
+<br>
+<span class="code1">container</span> {
+    <br>
+    &emsp;<span class="code2">display</span>: <span class="code3">flex</span>;
+    <br>&emsp;<span class="code2">flex-flow</span>: <span class="code3">column wrap</span>;
+    <br>
+}
+                    </td>
+                </tr>
             </tbody>
     </div>
 </body>
